// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceGroupOption custom renders correctly 1`] = `
<div>
  <div
    className=
        ms-ChoiceField
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          margin-top: 8px;
          min-height: 26px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
          padding-left: 26px;
        }
  >
    <div
      className="ms-ChoiceField-wrapper"
    >
      <input
        className=
            ms-ChoiceField-input
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            {
              cursor: pointer;
              display: inline-block;
              margin-top: 0px;
              min-height: 20px;
              position: relative;
              user-select: none;
              vertical-align: top;
            }
            &:hover .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:hover:before {
              border-color: #323130;
            }
            &:hover:after {
              background-color: #605e5c;
              content: "";
              height: 10px;
              left: 5px;
              top: 5px;
              transition-property: background-color;
              width: 10px;
            }
            &:focus .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:focus:before {
              border-color: #323130;
            }
            &:focus:after {
              background-color: #605e5c;
              content: "";
              height: 10px;
              left: 5px;
              top: 5px;
              transition-property: background-color;
              width: 10px;
            }
            &:before {
              background-color: #ffffff;
              border-color: #323130;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: 0px;
              position: absolute;
              top: 0px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            &:after {
              border-radius: 50%;
              box-sizing: border-box;
              content: "";
              height: 0px;
              left: 10px;
              position: absolute;
              right: 0px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 0px;
            }
      >
        <span>
          Option A
        </span>
      </label>
    </div>
  </div>
  <div
    className=
        ms-ChoiceField
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          margin-top: 8px;
          min-height: 26px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
          padding-left: 26px;
        }
  >
    <div
      className="ms-ChoiceField-wrapper"
    >
      <input
        className=
            ms-ChoiceField-input
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            {
              cursor: pointer;
              display: inline-block;
              margin-top: 0px;
              min-height: 20px;
              position: relative;
              user-select: none;
              vertical-align: top;
            }
            &:hover .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:hover:before {
              border-color: #323130;
            }
            &:hover:after {
              background-color: #605e5c;
              content: "";
              height: 10px;
              left: 5px;
              top: 5px;
              transition-property: background-color;
              width: 10px;
            }
            &:focus .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:focus:before {
              border-color: #323130;
            }
            &:focus:after {
              background-color: #605e5c;
              content: "";
              height: 10px;
              left: 5px;
              top: 5px;
              transition-property: background-color;
              width: 10px;
            }
            &:before {
              background-color: #ffffff;
              border-color: #323130;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: 0px;
              position: absolute;
              top: 0px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            &:after {
              border-radius: 50%;
              box-sizing: border-box;
              content: "";
              height: 0px;
              left: 10px;
              position: absolute;
              right: 0px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 0px;
            }
      >
        <span
          className="ms-ChoiceFieldLabel"
        >
          Option B
        </span>
      </label>
    </div>
  </div>
  <div
    className=
        ms-ChoiceField
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          margin-top: 8px;
          min-height: 26px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
          padding-left: 26px;
        }
  >
    <div
      className="ms-ChoiceField-wrapper"
    >
      <input
        className=
            ms-ChoiceField-input
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            {
              cursor: pointer;
              display: inline-block;
              margin-top: 0px;
              min-height: 20px;
              position: relative;
              user-select: none;
              vertical-align: top;
            }
            &:hover .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:hover:before {
              border-color: #323130;
            }
            &:hover:after {
              background-color: #605e5c;
              content: "";
              height: 10px;
              left: 5px;
              top: 5px;
              transition-property: background-color;
              width: 10px;
            }
            &:focus .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:focus:before {
              border-color: #323130;
            }
            &:focus:after {
              background-color: #605e5c;
              content: "";
              height: 10px;
              left: 5px;
              top: 5px;
              transition-property: background-color;
              width: 10px;
            }
            &:before {
              background-color: #ffffff;
              border-color: #323130;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: 0px;
              position: absolute;
              top: 0px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            &:after {
              border-radius: 50%;
              box-sizing: border-box;
              content: "";
              height: 0px;
              left: 10px;
              position: absolute;
              right: 0px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 0px;
            }
      >
        <div
          className="customWrapper"
        >
          <span
            className="ms-ChoiceFieldLabel"
          >
            Option C
          </span>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`ChoiceGroupOption renders ChoiceGroup correctly 1`] = `
<div>
  <div
    className=
        ms-ChoiceField
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          margin-top: 8px;
          min-height: 26px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
          padding-left: 26px;
        }
  >
    <div
      className="ms-ChoiceField-wrapper"
    >
      <input
        className=
            ms-ChoiceField-input
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            {
              cursor: pointer;
              display: inline-block;
              margin-top: 0px;
              min-height: 20px;
              position: relative;
              user-select: none;
              vertical-align: top;
            }
            &:hover .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:hover:before {
              border-color: #323130;
            }
            &:hover:after {
              background-color: #605e5c;
              content: "";
              height: 10px;
              left: 5px;
              top: 5px;
              transition-property: background-color;
              width: 10px;
            }
            &:focus .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:focus:before {
              border-color: #323130;
            }
            &:focus:after {
              background-color: #605e5c;
              content: "";
              height: 10px;
              left: 5px;
              top: 5px;
              transition-property: background-color;
              width: 10px;
            }
            &:before {
              background-color: #ffffff;
              border-color: #323130;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: 0px;
              position: absolute;
              top: 0px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            &:after {
              border-radius: 50%;
              box-sizing: border-box;
              content: "";
              height: 0px;
              left: 10px;
              position: absolute;
              right: 0px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 0px;
            }
      >
        <span
          className="ms-ChoiceFieldLabel"
        >
          Option A
        </span>
      </label>
    </div>
  </div>
  <div
    className=
        ms-ChoiceField
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          margin-top: 8px;
          min-height: 26px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
          padding-left: 26px;
        }
  >
    <div
      className=
          ms-ChoiceField-wrapper
          is-inFocus
          .ms-Fabric--isFocusVisible & {
            outline: transparent;
            position: relative;
          }
          .ms-Fabric--isFocusVisible &::-moz-focus-inner {
            border: 0px;
          }
          .ms-Fabric--isFocusVisible &:after {
            border: 1px solid #605e5c;
            bottom: -2px;
            content: "";
            left: -2px;
            pointer-events: none;
            position: absolute;
            right: -2px;
            top: -2px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:after {
            border-color: WindowText;
            border-width: 2px;
          }
          :host(.ms-Fabric--isFocusVisible) & {
            outline: transparent;
            position: relative;
          }
          :host(.ms-Fabric--isFocusVisible) &::-moz-focus-inner {
            border: 0px;
          }
          :host(.ms-Fabric--isFocusVisible) &:after {
            border: 1px solid #605e5c;
            bottom: -2px;
            content: "";
            left: -2px;
            pointer-events: none;
            position: absolute;
            right: -2px;
            top: -2px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:after {
            border-color: WindowText;
            border-width: 2px;
          }
    >
      <input
        className=
            ms-ChoiceField-input
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            {
              cursor: pointer;
              display: inline-block;
              margin-top: 0px;
              min-height: 20px;
              position: relative;
              user-select: none;
              vertical-align: top;
            }
            &:hover .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:hover:before {
              border-color: #323130;
            }
            &:hover:after {
              background-color: #605e5c;
              content: "";
              height: 10px;
              left: 5px;
              top: 5px;
              transition-property: background-color;
              width: 10px;
            }
            &:focus .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:focus:before {
              border-color: #323130;
            }
            &:focus:after {
              background-color: #605e5c;
              content: "";
              height: 10px;
              left: 5px;
              top: 5px;
              transition-property: background-color;
              width: 10px;
            }
            &:before {
              background-color: #ffffff;
              border-color: #323130;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: 0px;
              position: absolute;
              top: 0px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            &:after {
              border-radius: 50%;
              box-sizing: border-box;
              content: "";
              height: 0px;
              left: 10px;
              position: absolute;
              right: 0px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 0px;
            }
      >
        <span
          className="ms-ChoiceFieldLabel"
        >
          Option B
        </span>
      </label>
    </div>
  </div>
  <div
    className=
        ms-ChoiceField
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          margin-top: 8px;
          min-height: 26px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
          padding-left: 26px;
        }
  >
    <div
      className=
          ms-ChoiceField-wrapper
          is-inFocus
          .ms-Fabric--isFocusVisible & {
            outline: transparent;
            position: relative;
          }
          .ms-Fabric--isFocusVisible &::-moz-focus-inner {
            border: 0px;
          }
          .ms-Fabric--isFocusVisible &:after {
            border: 1px solid #605e5c;
            bottom: -2px;
            content: "";
            left: -2px;
            pointer-events: none;
            position: absolute;
            right: -2px;
            top: -2px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:after {
            border-color: WindowText;
            border-width: 2px;
          }
          :host(.ms-Fabric--isFocusVisible) & {
            outline: transparent;
            position: relative;
          }
          :host(.ms-Fabric--isFocusVisible) &::-moz-focus-inner {
            border: 0px;
          }
          :host(.ms-Fabric--isFocusVisible) &:after {
            border: 1px solid #605e5c;
            bottom: -2px;
            content: "";
            left: -2px;
            pointer-events: none;
            position: absolute;
            right: -2px;
            top: -2px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:after {
            border-color: WindowText;
            border-width: 2px;
          }
    >
      <input
        checked={true}
        className=
            ms-ChoiceField-input
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            is-checked
            {
              border-color: #0078d4;
              cursor: pointer;
              display: inline-block;
              margin-top: 0px;
              min-height: 20px;
              position: relative;
              user-select: none;
              vertical-align: top;
            }
            &:hover .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:hover:before {
              border-color: #005a9e;
            }
            &:hover:after {
              background: #005a9e;
              border-color: #005a9e;
            }
            &:focus .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:focus:before {
              border-color: #005a9e;
            }
            &:focus:after {
              background: #005a9e;
              border-color: #005a9e;
            }
            &:before {
              background-color: #ffffff;
              border-color: #0078d4;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: 0px;
              position: absolute;
              top: 0px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:before {
              background: Window;
              border-color: Highlight;
              forced-color-adjust: none;
            }
            &:after {
              background: #0078d4;
              border-color: #0078d4;
              border-radius: 50%;
              border-style: solid;
              border-width: 5px;
              box-sizing: border-box;
              content: "";
              height: 10px;
              left: 5px;
              position: absolute;
              right: 0px;
              top: 5px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 10px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:after {
              border-color: Highlight;
              forced-color-adjust: none;
            }
      >
        <span
          className="ms-ChoiceFieldLabel"
        >
          Option C
        </span>
      </label>
    </div>
  </div>
  <div
    className=
        ms-ChoiceField
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          margin-top: 8px;
          min-height: 26px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
          padding-left: 26px;
        }
  >
    <div
      className="ms-ChoiceField-wrapper"
    >
      <input
        className=
            ms-ChoiceField-input
            is-disabled
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            {
              cursor: default;
              display: inline-block;
              margin-top: 0px;
              min-height: 20px;
              position: relative;
              user-select: none;
              vertical-align: top;
            }
            &:before {
              background-color: #ffffff;
              border-color: #c8c6c4;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: 0px;
              position: absolute;
              top: 0px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:before {
              -ms-high-contrast-adjust: none;
              background: Window;
              border-color: GrayText;
              forced-color-adjust: none;
            }
            &:after {
              border-radius: 50%;
              box-sizing: border-box;
              content: "";
              height: 0px;
              left: 10px;
              position: absolute;
              right: 0px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 0px;
            }
            & .ms-ChoiceFieldLabel {
              color: #a19f9d;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& .ms-ChoiceFieldLabel {
              -ms-high-contrast-adjust: none;
              color: GrayText;
              forced-color-adjust: none;
            }
      >
        <span
          className="ms-ChoiceFieldLabel"
        >
          Option D
        </span>
      </label>
    </div>
  </div>
  <div
    className=
        ms-ChoiceField
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          margin-top: 8px;
          min-height: 26px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
          padding-left: 26px;
        }
  >
    <div
      className="ms-ChoiceField-wrapper"
    >
      <input
        checked={true}
        className=
            ms-ChoiceField-input
            is-disabled
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            is-checked
            {
              border-color: #f3f2f1;
              cursor: default;
              display: inline-block;
              margin-top: 0px;
              min-height: 20px;
              position: relative;
              user-select: none;
              vertical-align: top;
            }
            &:before {
              background-color: #ffffff;
              border-color: #c8c6c4;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: 0px;
              position: absolute;
              top: 0px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:before {
              -ms-high-contrast-adjust: none;
              background: Window;
              border-color: Highlight;
              forced-color-adjust: none;
            }
            &:after {
              background: #0078d4;
              border-color: #c8c6c4;
              border-radius: 50%;
              border-style: solid;
              border-width: 5px;
              box-sizing: border-box;
              content: "";
              height: 10px;
              left: 5px;
              position: absolute;
              right: 0px;
              top: 5px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 10px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:after {
              border-color: Highlight;
              forced-color-adjust: none;
            }
            & .ms-ChoiceFieldLabel {
              color: #a19f9d;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& .ms-ChoiceFieldLabel {
              -ms-high-contrast-adjust: none;
              color: GrayText;
              forced-color-adjust: none;
            }
      >
        <span
          className="ms-ChoiceFieldLabel"
        >
          Option E
        </span>
      </label>
    </div>
  </div>
  <div
    className=
        ms-ChoiceField
        ms-ChoiceField--icon
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: #f3f2f1;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: inline-flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 0px;
          font-weight: 400;
          height: 100%;
          margin-bottom: 4px;
          margin-left: 0;
          margin-right: 4px;
          margin-top: 0;
          min-height: 26px;
          padding-left: 0px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
        }
  >
    <div
      className="ms-ChoiceField-wrapper"
    >
      <input
        className=
            ms-ChoiceField-input
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            ms-ChoiceField--icon
            {
              align-items: center;
              border: 1px solid transparent;
              box-sizing: content-box;
              cursor: pointer;
              display: flex;
              flex-direction: column;
              justify-content: center;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              min-height: 20px;
              padding-top: 22px;
              position: relative;
              text-align: center;
              transition-duration: 200ms;
              transition-property: all;
              transition-timing-function: ease;
              user-select: none;
              vertical-align: top;
            }
            &:hover {
              border-color: #323130;
            }
            &:hover .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:hover:before {
              border-color: #323130;
              opacity: 1;
            }
            &:focus {
              border-color: #323130;
            }
            &:focus .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:focus:before {
              border-color: #323130;
              opacity: 1;
            }
            &:before {
              background-color: #ffffff;
              border-color: #323130;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: auto;
              opacity: 0;
              position: absolute;
              right: 3px;
              top: 3px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            &:after {
              border-radius: 50%;
              box-sizing: border-box;
              content: "";
              height: 0px;
              left: 10px;
              position: absolute;
              right: 0px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 0px;
            }
      >
        <div
          className=
              ms-ChoiceField-innerField
              {
                display: inline-block;
                padding-left: 30px;
                padding-right: 30px;
                position: relative;
              }
        >
          <div
            className=
                ms-ChoiceField-iconWrapper
                {
                  font-size: 32px;
                  height: 32px;
                  line-height: 32px;
                }
          >
            <i
              aria-hidden={true}
              className=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: inline-block;
                    font-family: "FabricMDL2Icons";
                    font-style: normal;
                    font-weight: normal;
                    speak: none;
                  }
              data-icon-name="Calendar"
            >
              
            </i>
          </div>
        </div>
        <div
          className=
              ms-ChoiceField-labelWrapper
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: block;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 32px;
                line-height: 15px;
                margin-bottom: 2px;
                margin-left: 8px;
                margin-right: 8px;
                margin-top: 4px;
                max-width: 64px;
                overflow: hidden;
                position: relative;
                white-space: pre-wrap;
              }
        >
          <span
            className="ms-ChoiceFieldLabel"
          >
            Option F
          </span>
        </div>
      </label>
    </div>
  </div>
  <div
    className=
        ms-ChoiceField
        ms-ChoiceField--icon
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: #f3f2f1;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: inline-flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 0px;
          font-weight: 400;
          height: 100%;
          margin-bottom: 4px;
          margin-left: 0;
          margin-right: 4px;
          margin-top: 0;
          min-height: 26px;
          padding-left: 0px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
        }
  >
    <div
      className=
          ms-ChoiceField-wrapper
          is-inFocus
          .ms-Fabric--isFocusVisible & {
            outline: transparent;
            position: relative;
          }
          .ms-Fabric--isFocusVisible &::-moz-focus-inner {
            border: 0px;
          }
          .ms-Fabric--isFocusVisible &:after {
            border: 1px solid #605e5c;
            bottom: -2px;
            content: "";
            left: -2px;
            pointer-events: none;
            position: absolute;
            right: -2px;
            top: -2px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:after {
            border-color: WindowText;
            border-width: 1px;
          }
          :host(.ms-Fabric--isFocusVisible) & {
            outline: transparent;
            position: relative;
          }
          :host(.ms-Fabric--isFocusVisible) &::-moz-focus-inner {
            border: 0px;
          }
          :host(.ms-Fabric--isFocusVisible) &:after {
            border: 1px solid #605e5c;
            bottom: -2px;
            content: "";
            left: -2px;
            pointer-events: none;
            position: absolute;
            right: -2px;
            top: -2px;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:after {
            border-color: WindowText;
            border-width: 1px;
          }
    >
      <input
        className=
            ms-ChoiceField-input
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            ms-ChoiceField--icon
            {
              align-items: center;
              border: 1px solid transparent;
              box-sizing: content-box;
              cursor: pointer;
              display: flex;
              flex-direction: column;
              justify-content: center;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              min-height: 20px;
              padding-top: 22px;
              position: relative;
              text-align: center;
              transition-duration: 200ms;
              transition-property: all;
              transition-timing-function: ease;
              user-select: none;
              vertical-align: top;
            }
            &:hover {
              border-color: #323130;
            }
            &:hover .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:hover:before {
              border-color: #323130;
              opacity: 1;
            }
            &:focus {
              border-color: #323130;
            }
            &:focus .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:focus:before {
              border-color: #323130;
              opacity: 1;
            }
            &:before {
              background-color: #ffffff;
              border-color: #323130;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: auto;
              opacity: 0;
              position: absolute;
              right: 3px;
              top: 3px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            &:after {
              border-radius: 50%;
              box-sizing: border-box;
              content: "";
              height: 0px;
              left: 10px;
              position: absolute;
              right: 0px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 0px;
            }
      >
        <div
          className=
              ms-ChoiceField-innerField
              {
                display: inline-block;
                padding-left: 30px;
                padding-right: 30px;
                position: relative;
              }
        >
          <div
            className=
                ms-ChoiceField-iconWrapper
                {
                  font-size: 32px;
                  height: 32px;
                  line-height: 32px;
                }
          >
            <i
              aria-hidden={true}
              className=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: inline-block;
                    font-family: "FabricMDL2Icons-2";
                    font-style: normal;
                    font-weight: normal;
                    speak: none;
                  }
              data-icon-name="CalendarWeek"
            >
              
            </i>
          </div>
        </div>
        <div
          className=
              ms-ChoiceField-labelWrapper
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: block;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 32px;
                line-height: 15px;
                margin-bottom: 2px;
                margin-left: 8px;
                margin-right: 8px;
                margin-top: 4px;
                max-width: 64px;
                overflow: hidden;
                position: relative;
                white-space: pre-wrap;
              }
        >
          <span
            className="ms-ChoiceFieldLabel"
          >
            Option G
          </span>
        </div>
      </label>
    </div>
  </div>
  <div
    className=
        ms-ChoiceField
        ms-ChoiceField--icon
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: #f3f2f1;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: inline-flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 0px;
          font-weight: 400;
          height: 100%;
          margin-bottom: 4px;
          margin-left: 0;
          margin-right: 4px;
          margin-top: 0;
          min-height: 26px;
          padding-left: 0px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
        }
  >
    <div
      className="ms-ChoiceField-wrapper"
    >
      <input
        checked={true}
        className=
            ms-ChoiceField-input
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            is-checked
            ms-ChoiceField--icon
            {
              align-items: center;
              border-color: #0078d4;
              border: 1px solid transparent;
              box-sizing: content-box;
              cursor: pointer;
              display: flex;
              flex-direction: column;
              justify-content: center;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              min-height: 20px;
              padding-top: 22px;
              position: relative;
              text-align: center;
              transition-duration: 200ms;
              transition-property: all;
              transition-timing-function: ease;
              user-select: none;
              vertical-align: top;
            }
            &:hover {
              border-color: #005a9e;
            }
            &:hover .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:hover:before {
              border-color: #005a9e;
              opacity: 1;
            }
            &:hover:after {
              background: #005a9e;
              border-color: #005a9e;
            }
            &:focus {
              border-color: #005a9e;
            }
            &:focus .ms-ChoiceFieldLabel {
              color: #201f1e;
            }
            &:focus:before {
              border-color: #005a9e;
              opacity: 1;
            }
            &:focus:after {
              background: #005a9e;
              border-color: #005a9e;
            }
            &:before {
              background-color: #ffffff;
              border-color: #0078d4;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: auto;
              opacity: 1;
              position: absolute;
              right: 3px;
              top: 3px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:before {
              background: Window;
              border-color: Highlight;
              forced-color-adjust: none;
            }
            &:after {
              background: #0078d4;
              border-color: #0078d4;
              border-radius: 50%;
              border-style: solid;
              border-width: 5px;
              box-sizing: border-box;
              content: "";
              height: 10px;
              left: auto;
              position: absolute;
              right: 8px;
              top: 8px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 10px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:after {
              border-color: Highlight;
              forced-color-adjust: none;
            }
      >
        <div
          className=
              ms-ChoiceField-innerField
              {
                display: inline-block;
                padding-left: 30px;
                padding-right: 30px;
                position: relative;
              }
        >
          <div
            className=
                ms-ChoiceField-iconWrapper
                {
                  font-size: 32px;
                  height: 32px;
                  line-height: 32px;
                }
          >
            <i
              aria-hidden={true}
              className=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: inline-block;
                    font-family: "FabricMDL2Icons-2";
                    font-style: normal;
                    font-weight: normal;
                    speak: none;
                  }
              data-icon-name="CalendarDay"
            >
              
            </i>
          </div>
        </div>
        <div
          className=
              ms-ChoiceField-labelWrapper
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: block;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 32px;
                line-height: 15px;
                margin-bottom: 2px;
                margin-left: 8px;
                margin-right: 8px;
                margin-top: 4px;
                max-width: 64px;
                overflow: hidden;
                position: relative;
                white-space: pre-wrap;
              }
        >
          <span
            className="ms-ChoiceFieldLabel"
          >
            Option H
          </span>
        </div>
      </label>
    </div>
  </div>
  <div
    className=
        ms-ChoiceField
        ms-ChoiceField--icon
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          align-items: center;
          background-color: #f3f2f1;
          border: none;
          box-sizing: border-box;
          color: #323130;
          display: inline-flex;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 0px;
          font-weight: 400;
          height: 100%;
          margin-bottom: 4px;
          margin-left: 0;
          margin-right: 4px;
          margin-top: 0;
          min-height: 26px;
          padding-left: 0px;
          position: relative;
        }
        & .ms-ChoiceFieldLabel {
          display: inline-block;
        }
  >
    <div
      className="ms-ChoiceField-wrapper"
    >
      <input
        className=
            ms-ChoiceField-input
            is-disabled
            {
              height: 100%;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              opacity: 0;
              position: absolute;
              right: 0px;
              top: 0px;
              width: 100%;
            }
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="radio"
      />
      <label
        className=
            ms-ChoiceField-field
            ms-ChoiceField--icon
            {
              align-items: center;
              border: 1px solid transparent;
              box-sizing: content-box;
              cursor: default;
              display: flex;
              flex-direction: column;
              justify-content: center;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              min-height: 20px;
              padding-top: 22px;
              position: relative;
              text-align: center;
              transition-duration: 200ms;
              transition-property: all;
              transition-timing-function: ease;
              user-select: none;
              vertical-align: top;
            }
            &:before {
              background-color: #ffffff;
              border-color: #c8c6c4;
              border-radius: 50%;
              border-style: solid;
              border-width: 1px;
              box-sizing: border-box;
              content: "";
              display: inline-block;
              font-weight: normal;
              height: 20px;
              left: auto;
              opacity: 0;
              position: absolute;
              right: 3px;
              top: 3px;
              transition-duration: 200ms;
              transition-property: border-color;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 20px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:before {
              -ms-high-contrast-adjust: none;
              background: Window;
              border-color: GrayText;
              forced-color-adjust: none;
            }
            &:after {
              border-radius: 50%;
              box-sizing: border-box;
              content: "";
              height: 0px;
              left: 10px;
              position: absolute;
              right: 0px;
              transition-duration: 200ms;
              transition-property: border-width;
              transition-timing-function: cubic-bezier(.4, 0, .23, 1);
              width: 0px;
            }
            & .ms-ChoiceFieldLabel {
              color: #a19f9d;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& .ms-ChoiceFieldLabel {
              -ms-high-contrast-adjust: none;
              color: GrayText;
              forced-color-adjust: none;
            }
      >
        <div
          className=
              ms-ChoiceField-innerField
              {
                display: inline-block;
                opacity: 0.25;
                padding-left: 30px;
                padding-right: 30px;
                position: relative;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                color: GrayText;
                opacity: 1;
              }
        >
          <div
            className=
                ms-ChoiceField-iconWrapper
                {
                  font-size: 32px;
                  height: 32px;
                  line-height: 32px;
                }
          >
            <i
              aria-hidden={true}
              className=

                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    display: inline-block;
                    font-family: "FabricMDL2Icons-2";
                    font-style: normal;
                    font-weight: normal;
                    speak: none;
                  }
              data-icon-name="CalendarWeek"
            >
              
            </i>
          </div>
        </div>
        <div
          className=
              ms-ChoiceField-labelWrapper
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                display: block;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 32px;
                line-height: 15px;
                margin-bottom: 2px;
                margin-left: 8px;
                margin-right: 8px;
                margin-top: 4px;
                max-width: 64px;
                overflow: hidden;
                position: relative;
                white-space: pre-wrap;
              }
        >
          <span
            className="ms-ChoiceFieldLabel"
          >
            Option I
          </span>
        </div>
      </label>
    </div>
  </div>
</div>
`;
